# agentic-pr-reviewer

./: .gitignore  README.md  pyproject.toml
appsec/: agent.py  appsec.py  cli.py  exceptions.py  schemas.py  urls.py  utils.py
appsec/clients/: github.py
appsec/prompts/: code_suggestions.toml  manager_agent.toml
